--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,8 @@
 
     <!--Application version-->
     <string name="version_name">version: </string>
-    <string name="version_number" translatable="false">0.1.6</string>
-    <string name="version_code" translatable="false">21</string>
+    <string name="version_number" translatable="false">0.1.7</string>
+    <string name="version_code" translatable="false">22</string>
 
     <!--Application information-->
     <string name="info_app_name" translatable="false">Shutter Notes</string>
@@ -125,7 +125,7 @@
     <string name="dialog_instruction_title">Instructions</string>
     <string name="dialog_warning_flickr_account_message">When signing in to your Flickr account uncheck the option \"Remember email address\", otherwise you won\'t be able to sign in</string>
     <string name="dialog_warning_flickr_note_message">Before create your Flickr notes, do not forget to synchronize your camera and smartphone clocks</string>
-    <string name="dialog_instruction_fullscreen_message">Take a picture of the green screen to mark the start of the photo sequence. After finish, touch the screen to turn it red and take a picture to mark the end of the sequence. Finally, touch the screen again to exit.</string>
+    <string name="dialog_instruction_fullscreen_message">Take a picture of the green screen to mark the start of the photo sequence. After finish, long click the screen to turn it red and take a picture to mark the end of the sequence. Finally, long click the screen again to exit.</string>
     <string name="dialog_warning_button_ok">Ok, I understand</string>
     <string name="alert_title_delete_gear">Delete accessory?</string>
     <string name="alert_title_delete_note">Delete note?</string>
