--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,8 @@
 
     <!--Application version-->
     <string name="version_name">version: </string>
-    <string name="version_number" translatable="false">0.1.10</string>
-    <string name="version_code" translatable="false">25</string>
+    <string name="version_number" translatable="false">0.1.11</string>
+    <string name="version_code" translatable="false">26</string>
 
     <!--Application information-->
     <string name="info_app_name" translatable="false">Shutter Notes</string>
@@ -195,6 +195,10 @@
     <string name="pref_group_flickr_notes_settings_key" translatable="false">FLICKR_NOTES_KEY</string>
     <string name="pref_group_flickr_notes">FLICKR NOTES</string>
 
+    <!-- UPLOAD TO FLICKR group -->'
+    <string name="pref_group_flickr_upload_settings_key" translatable="false">FLICKR_UPLOAD_KEY</string>
+    <string name="pref_group_flickr_upload">UPLOAD</string>
+
     <!-- What show on full screen note -->
     <string name="pref_key_what_show" translatable="false">WHAT_SHOW</string>
     <string name="pref_title_what_show">On fullscreen show</string>
@@ -204,6 +208,11 @@
     <string name="pref_key_map_zoom_level" translatable="false">MAP_ZOOM_LEVEL</string>
     <string name="pref_title_map_zoom_level">Map zoom level</string>
     <string name="pref_def_map_zoom_level" translatable="false">2</string>
+
+    <!-- Overwrite tags -->
+    <string name="pref_key_overwrite_tags" translatable="false">OVERWRITE_TAGS</string>
+    <string name="pref_title_overwrite_tags">Overwrite tags</string>
+    <string name="pref_def_overwrite_tags" translatable="false">1</string>
 
     <!-- Upload location -->
     <string name="pref_key_upload_location" translatable="false">UPLOAD_LOCATION</string>
