--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,8 @@
 
     <!--Application version-->
     <string name="version_name">version: </string>
-    <string name="version_number" translatable="false">0.1.17</string>
-    <string name="version_code" translatable="false">32</string>
+    <string name="version_number" translatable="false">0.2.0</string>
+    <string name="version_code" translatable="false">34</string>
 
     <!--Application information-->
     <string name="info_app_name" translatable="false">Shutter Notes</string>
@@ -33,6 +33,7 @@
     <string name="nav_menu_flickr">Flickr Notes</string>
     <string name="nav_menu_archive">Archived</string>
     <string name="nav_menu_account">Flickr Account</string>
+    <string name="nav_menu_clock">Clock</string>
     <string name="nav_menu_settings">Settings</string>
     <string name="nav_menu_help">Help</string>
     <string name="nav_menu_about">About</string>
@@ -77,6 +78,7 @@
     <string name="activity_title_flickr_connect">Connect Flickr account</string>
     <string name="activity_title_flickr_photosets">Choose photoset</string>
     <string name="activity_title_flickr_upload">Updated photos</string>
+    <string name="activity_title_clock">Clock</string>
 
     <string name="action_send_feedback">Send feedback</string>
     <string name="action_send_question">Send question</string>
@@ -98,6 +100,7 @@
     <string name="action_restore_all">Restore all</string>
     <string name="action_upload_to_flickr">Upload to Flickr</string>
     <string name="action_restore_defaults">Restore defaults</string>
+    <string name="action_sync_clock">Syncronize clock</string>
 
     <string name="context_archive">Archive</string>
     <string name="context_restore">Restore</string>
@@ -107,12 +110,12 @@
     <!--Text Views-->
     <string name="text_hint_simple_note">Write your note here</string>
     <string name="text_hint_gear_note_title">Type here the title</string>
-    <string name="text_hint_empty" translatable="false"></string>
     <string name="text_list_gear_note_item">Accessory</string>
     <string name="text_hint_flickr_note_title">Type here the title</string>
     <string name="text_hint_flickr_note_description">Write here the description</string>
     <string name="text_type_code">Type the code here</string>
     <string name="text_photoset_size">photos</string>
+    <string name="text_syncronize_clock">SYNCHRONIZE YOUR CAMERA CLOCK</string>
 
     <!--Dialogs-->
     <string name="dialog_view_title">Title</string>
@@ -125,7 +128,7 @@
     <string name="dialog_instruction_title">Instructions</string>
     <string name="dialog_warning_flickr_note_message">Before create your Flickr notes, do not forget to synchronize your camera and smartphone clocks</string>
     <string name="dialog_instruction_fullscreen_message">Take a picture of the green screen to mark the start of the photo sequence. After finish, long click the screen to turn it red and take a picture to mark the end of the sequence. Finally, long click the screen again to exit.</string>
-    <string name="dialog_warning_button_ok">Ok, I understand</string>
+    <string name="dialog_warning_button_ok">OK, I understand</string>
     <string name="alert_title_delete_gear">Delete accessory?</string>
     <string name="alert_title_delete_note">Delete note?</string>
     <string name="alert_title_delete_all_notes">Delete all notes?</string>
