--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,8 @@
 
     <!--Application version-->
     <string name="version_name">version: </string>
-    <string name="version_number" translatable="false">0.2.1</string>
-    <string name="version_code" translatable="false">35</string>
+    <string name="version_number" translatable="false">0.2.2</string>
+    <string name="version_code" translatable="false">36</string>
 
     <!--Application information-->
     <string name="info_app_name" translatable="false">Shutter Notes</string>
@@ -33,7 +33,7 @@
     <string name="nav_menu_flickr">Flickr Notes</string>
     <string name="nav_menu_archive">Archived</string>
     <string name="nav_menu_account">Flickr Account</string>
-    <string name="nav_menu_clock">Clock</string>
+    <string name="nav_menu_clock">Synchronize Clocks</string>
     <string name="nav_menu_settings">Settings</string>
     <string name="nav_menu_help">Help</string>
     <string name="nav_menu_about">About</string>
