--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -5,7 +5,7 @@
     <string name="navigation_drawer_close">Fechar drawer</string>
     <string name="navigation_drawer_open">Abrir drawer</string>
     <string name="nav_header_title">mohb apps</string>
-    <string name="nav_header_subtitle">mail@mohb-apps.com</string>
+    <string name="nav_header_subtitle">mail@mohb.app</string>
     <string name="nav_header_desc">ShutterNotes</string>
     <string name="activity_title_about">Sobre</string>
     <string name="activity_title_help">Ajuda</string>
@@ -23,7 +23,6 @@
     <string name="action_report_bug">Relatar uma falha</string>
     <string name="action_website">Website</string>
     <string name="action_material_icons">Atribuição dos recursos gráficos</string>
-    <string name="info_feedback_email">duvida@mohb-apps.com.br</string>
     <string name="dialog_view_text">texto</string>
     <string name="dialog_view_title">Título</string>
     <string name="toast_get_help_page">Carregando página de ajuda da internet…</string>
@@ -160,5 +159,7 @@
     <string name="url_help_flickr_note">br-shutternotes-help-flicknote</string>
     <string name="action_help">Ajuda</string>
     <string name="toast_unable_to_communicate">Não foi possível a comunicação com o Flickr</string>
+    <string name="info_website">mohb.app/br</string>
+    <string name="action_bug_report">Falha no aplicativo</string>
 
 </resources>
