--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,14 +7,15 @@
 
     <!--Application version-->
     <string name="version_name">version: </string>
-    <string name="version_number" translatable="false">0.2.10</string>
-    <string name="version_code" translatable="false">44</string>
+    <string name="version_number" translatable="false">0.2.11</string>
+    <string name="version_code" translatable="false">45</string>
 
     <!--Application information-->
     <string name="info_app_name" translatable="false">Shutter Notes</string>
     <string name="info_name" translatable="false">mohb apps</string>
-    <string name="info_website" translatable="false">mohb-apps.com</string>
-    <string name="info_feedback_email">feedback@mohb-apps.com</string>
+    <string name="info_website">mohb.app</string>
+    <string name="info_feedback_email" translatable="false">feedback@mohb.app</string>
+    <string name="info_bug_email" translatable="false">bug@mohb.app</string>
     <string name="info_developer">Developer:</string>
     <string name="info_developer_name" translatable="false">Haraldo Albergaria Filho</string>
     <string name="info_copyright_text" translatable="false">Copyright © 2019 mohb apps</string>
@@ -28,7 +29,7 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">mohb apps</string>
-    <string name="nav_header_subtitle">mail@mohb-apps.com</string>
+    <string name="nav_header_subtitle">mail@mohb.app</string>
     <string name="nav_header_desc">ShutterNotes</string>
     <string name="nav_menu_simple">Simple Notes</string>
     <string name="nav_menu_gear">Gear Notes</string>
@@ -91,6 +92,7 @@
     <string name="action_website">Website</string>
     <string name="action_feedback">Feedback</string>
     <string name="action_question">Question</string>
+    <string name="action_bug_report">Bug in application</string>
     <string name="action_about_application">about application</string>
     <string name="action_settings">Settings</string>
     <string name="action_add_gear">Add new gear</string>
@@ -169,8 +171,8 @@
     <string name="toast_no_photos_updated">No photos were updated</string>
 
     <!--Help pages-->
-    <string name="url_website" translatable="false">https://mohb-apps.com/</string>
-    <string name="url_help">shutter-notes</string>
+    <string name="url_website" translatable="false">https://mohb.app/Shutter-Notes/</string>
+    <string name="url_help">help</string>
     <string name="url_help_simple_note">shutternotes-help-simplenote</string>
     <string name="url_help_gear_note">shutternotes-help-gearnote</string>
     <string name="url_help_flickr_note">shutternotes-help-flicknote</string>
