--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -126,7 +126,6 @@
     <string name="toast_type_code">Você precisa digitar o código</string>
     <string name="toast_wrong_code">Código errado, tente novamente</string>
     <string name="activity_title_flickr_photosets">Escolher álbum</string>
-    <string name="text_photoset_size">fotos</string>
     <string name="alert_message_confirm_upload">Será feito o upload das informações das notas para o álbum selecionado. APÓS INICIADA ESTA OPERAÇÃO NÃO PODERÁ SER CANCELADA!</string>
     <string name="alert_title_confirm_upload">Confirmar o upload?</string>
     <string name="activity_title_flickr_upload">Fotos atualizadas</string>
@@ -134,8 +133,8 @@
     <string name="pref_overwrite_data_summ_off">Não sobrescrever dados existentes</string>
     <string name="pref_overwrite_data_summ_on">Sobrescrever dados existentes</string>
     <string name="pref_title_overwrite_data">Sobrescrever dados</string>
-    <string name="dialog_progress_photosets">Carregando álbuns…</string>
-    <string name="dialog_progress_upload_data">Adicionando dados às fotos…</string>
+    <string name="title_progress_photosets">Carregando álbuns…</string>
+    <string name="title_progress_upload_data">Adicionando dados às fotos…</string>
     <string name="toast_no_photos_updated">Nenhuma foto foi atualizada</string>
     <string name="dialog_warning_button_ok">Ok, entendi</string>
     <string name="dialog_warning_title">Aviso importante!</string>
@@ -161,5 +160,17 @@
     <string name="toast_unable_to_communicate">Não foi possível a comunicação com o Flickr</string>
     <string name="info_website">mohb.app/br</string>
     <string name="action_bug_report">Falha no aplicativo</string>
+    <string name="toast_location_updated">Localização atualizada!</string>
+    <string name="toast_location_not_updated">Não foi possível atualizar a localização</string>
+    <string name="action_update_location">Atualizar localização</string>
+    <string name="toast_photo">" foto"</string>
+    <string name="toast_s">s</string>
+    <string name="toast_was">" foi"</string>
+    <string name="toast_were">" foram"</string>
+    <string name="toast_updated">atualizada</string>
+    <string name="toast_end_s">s</string>
+    <string name="text_photo">foto</string>
+    <string name="text_s">s</string>
+    <string name="text_photo_cl">Foto</string>
 
 </resources>
