--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,8 @@
 
     <!--Application version-->
     <string name="version_name">version: </string>
-    <string name="version_number" translatable="false">0.2.11</string>
-    <string name="version_code" translatable="false">45</string>
+    <string name="version_number" translatable="false">0.2.12</string>
+    <string name="version_code" translatable="false">47</string>
 
     <!--Application information-->
     <string name="info_app_name" translatable="false">Shutter Notes</string>
@@ -95,7 +95,7 @@
     <string name="action_bug_report">Bug in application</string>
     <string name="action_about_application">about application</string>
     <string name="action_settings">Settings</string>
-    <string name="action_add_gear">Add new gear</string>
+    <string name="action_add_gear">Add new gearItem</string>
     <string name="action_select_all">Select all</string>
     <string name="action_unselect_all">Unselect all</string>
     <string name="action_delete_all">Delete all</string>
@@ -105,6 +105,7 @@
     <string name="action_upload_to_flickr">Upload to Flickr</string>
     <string name="action_restore_defaults">Restore defaults</string>
     <string name="action_sync_clock">Syncronize clock</string>
+    <string name="action_update_location">Update location</string>
     <string name="action_help">Help</string>
 
     <string name="context_archive">Archive</string>
@@ -119,7 +120,9 @@
     <string name="text_hint_flickr_note_title">Type here the title</string>
     <string name="text_hint_flickr_note_description">Write here the description</string>
     <string name="text_type_code">Type the code here</string>
-    <string name="text_photoset_size">photos</string>
+    <string name="text_photo">photo</string>
+    <string name="text_photo_cl">Photo</string>
+    <string name="text_s">s</string>
     <string name="text_syncronize_clock">SYNCHRONIZE YOUR CAMERA CLOCK</string>
 
     <!--Dialogs-->
@@ -127,8 +130,8 @@
     <string name="dialog_view_text">text</string>
     <string name="dialog_add_gear_title">New Accessory</string>
     <string name="dialog_edit_gear_title">Edit Accessory</string>
-    <string name="dialog_progress_upload_data">Adding data to photos…</string>
-    <string name="dialog_progress_photosets">Loading photosets…</string>
+    <string name="title_progress_upload_data">Adding data to photos…</string>
+    <string name="title_progress_photosets">Loading photosets…</string>
     <string name="dialog_warning_title">Important warning!</string>
     <string name="dialog_instruction_title">Instructions</string>
     <string name="dialog_warning_flickr_note_message">Before create your Flickr notes, do not forget to synchronize your camera and smartphone clocks</string>
@@ -149,7 +152,7 @@
     <string name="alert_message_can_be_restored">They will can be restored later\n</string>
     <string name="alert_message_delete_all_notes">All notes will be permanently deleted\n</string>
     <string name="alert_message_restore_all_notes">All notes will be restored to its original location\n</string>
-    <string name="alert_message_confirm_upload">The notes information will be uploaded to the selected photoset. AFTER STARTED THIS OPERATION WILL CAN NOT BE CANCELLED!</string>
+    <string name="alert_message_confirm_upload">The notes information will be uploaded to the selected photoset. AFTER STARTED THIS OPERATION WILL CAN NOT BE CANCELED!</string>
     <string name="alert_message_authenticate">You need to authenticate in your Flickr account to upload data. Do you want to try again?</string>
     <string name="alert_button_no">No</string>
     <string name="alert_button_yes">Yes</string>
@@ -169,6 +172,14 @@
     <string name="toast_account_connected">Account connected!</string>
     <string name="toast_unable_to_communicate">Unable to communicate with Flickr</string>
     <string name="toast_no_photos_updated">No photos were updated</string>
+    <string name="toast_photo">photo</string>
+    <string name="toast_s">s</string>
+    <string name="toast_end_s" />
+    <string name="toast_was">was</string>
+    <string name="toast_were">were</string>
+    <string name="toast_updated">updated</string>
+    <string name="toast_location_updated">Location updated!</string>
+    <string name="toast_location_not_updated">Unable to update location</string>
 
     <!--Help pages-->
     <string name="url_website" translatable="false">https://mohb.app/Shutter-Notes/</string>
