--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,8 @@
 
     <!--Application version-->
     <string name="version_name">version: </string>
-    <string name="version_number" translatable="false">0.2.13</string>
-    <string name="version_code" translatable="false">48</string>
+    <string name="version_number" translatable="false">0.2.14</string>
+    <string name="version_code" translatable="false">49</string>
 
     <!--Application information-->
     <string name="info_app_name" translatable="false">Shutter Notes</string>
@@ -260,5 +260,6 @@
     <string name="pref_archive_notes_summ_on">Archive after upload finished</string>
     <string name="pref_archive_notes_summ_off">Do not archive after upload finished</string>
     <string name="pref_def_archive_notes" translatable="false">false</string>
+    <string name="title_activity_new_fullscreen">FullscreenActivity</string>
 
 </resources>
