--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -176,5 +176,9 @@
     <string name="alert_message_run_background">Você deseja continuar fazendo o upload em segundo plano? Você será notificado quando ele terminar</string>
     <string name="notify_upload_completed">O upload terminou!</string>
     <string name="notify_title">Fazendo upload para o Flickr…</string>
+    <string name="pref_title_notif_sound">Som da notificação</string>
+    <string name="pref_def_notif_sound_title">Silencioso</string>
+    <string name="notify_channel_description">Mostra o progresso do upload and reabre o aplicativo se clicado</string>
+    <string name="notify_channel_name">Upload para o Flickr</string>
 
 </resources>
