--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,8 @@
 
     <!--Application version-->
     <string name="version_name">version: </string>
-    <string name="version_number" translatable="false">0.4.0</string>
-    <string name="version_code" translatable="false">55</string>
+    <string name="version_number" translatable="false">0.4.1</string>
+    <string name="version_code" translatable="false">56</string>
 
     <!--Application information-->
     <string name="info_app_name" translatable="false">Shutter Notes</string>
@@ -220,8 +220,8 @@
     <!-- Notification sound -->
     <string name="pref_key_notif_sound" translatable="false">NOTIF_SOUND</string>
     <string name="pref_title_notif_sound">Notification sound</string>
-    <string name="pref_def_notif_sound" translatable="false">0</string>
-    <string name="pref_def_notif_sound_title">Silent</string>
+    <string name="pref_notif_sound_silent_value" translatable="false">0</string>
+    <string name="pref_notif_sound_silent_title">Silent</string>
 
 
     <!-- FLICKR NOTES group -->'
